2004-09-06  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* configure.in (AC_PREREQ): Bumped to 2.58, to avoid problems with
	missing AC_HEADER_STDBOOL.
	
2004-09-06  Daniel Sebald  <daniel.sebald@ieee.org>

	* configure.in: The --enable-image option requires general binary data
	file code. Ensure --disable-binary-data-file is not in the option list
	if only --enable-image is activated.

2004-09-06  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/config.cyg config/config.mgw config/config.os2: Added #defines
	for "with image".

2004-09-03  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/breaders.c src/datafile.c: Get rid of compiler warnings.

2004-09-03  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/datafile.c: Changed default value of datafile endianess after
	reset: from variable df_bin_file_endianess_reset = DF_LITTLE_ENDIAN to
	#define DF_BIN_FILE_ENDIANESS_RESET THIS_COMPILER_ENDIAN.

2004-09-03  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* demo/image.dem: Added endian=little where necessary.

2004-09-02  Ethan Merritt  <merritt@u.washington.edu>
	* demo/all.dem: Include demos for candlesticks, multiplot, and
	enhanced text mode in the all.dem script used by "make check".

2004-09-01  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm (PNG_set_color PNG_image) term/pdf.trm (PDF_image)
	term/post.trm (PS_image): Change call from rgb255_from_gray() to
	rgb255maxcolors_from_gray(). Fixes color mapping with 'set palette
	maxcolors'.

	* src/getcolor.c: Remove unused routine rgb255_from_gray.

	* term/gd.trm: Add WITH_IMAGE support for gif terminal also.

2004-09-01  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* demo/Makefile.am.in: Add new binary demo files to Makefile.am
	target.

	src/Makefile.am: Add missing binary.h to bf_test_SOURCES.

2004-09-01  Daniel Sebald  <daniel.sebald@ieee.org>

	* NEWS: Updated.

	* configure.in: Added enable and define switches to activate new
	portions of code: